Width fix on mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -53,6 +53,7 @@ h1 {
 		width: 100%;
 		padding: 0;
 		border-radius: 0px;
+		min-width: 0;
 	}
 
 	body {
